--- a/config/deploy/production/config.yml
+++ b/config/deploy/production/config.yml
@@ -9,3 +9,4 @@ data:
   SLACKBOT_S3_BUCKET: drop-lookerbot
   SLACKBOT_S3_BUCKET_REGION: us-east-1
   LOOKER_SLACKBOT_EXPAND_URLS: "true"
+  LOOKER_CUSTOM_COMMAND_SPACE_ID: "176"
